--- a/html/bootstrap_grid_system.html
+++ b/html/bootstrap_grid_system.html
@@ -359,7 +359,7 @@
                                                 style="color:#999">&lt;</span>/div<span class="tagcolor"
                                                 style="color:#999">&gt;</span></span>
                                     </div>
-                                    <i>.</i>
+                                    <i><span style="color:#e7e9eb;">end.</span></i>
                                 </div>
 
                                 <p>Первый пример: создайте строку (
@@ -427,7 +427,7 @@
                                                 style="color:#999">&lt;</span>/div<span class="tagcolor"
                                                 style="color:#999">&gt;</span></span>
                                     </div>
-                                    <i class="w3-btn w3-margin-bottom">.</i>
+                                    <i><span style="color:#e7e9eb;">end.</span></i>
                                 </div>
 
                                 <div class="row test border-dark">
@@ -489,7 +489,7 @@
                                                 style="color:#999">&lt;</span>/div<span class="tagcolor"
                                                 style="color:#999">&gt;</span></span>
                                     </div>
-                                    <i class="w3-btn w3-margin-bottom">.</i>
+                                    <i><span style="color:#e7e9eb;">end.</span></i>
                                 </div>
 
                                 <div class="row test">
@@ -536,7 +536,7 @@
                                                 style="color:#999">&lt;</span>/div<span class="tagcolor"
                                                 style="color:#999">&gt;</span></span>
                                     </div>
-                                    <i class="w3-btn w3-margin-bottom">.</i>
+                                    <i><span style="color:#e7e9eb;">end.</span></i>
                                 </div>
 
 
@@ -609,7 +609,7 @@
                                                 style="color:#999">&lt;</span>/div<span class="tagcolor"
                                                 style="color:#999">&gt;</span></span>
                                     </div>
-                                    <i>.</i>
+                                    <i><span style="color:#e7e9eb;">end.</span></i>
                                 </div>
 
 
@@ -679,7 +679,7 @@
                                         &lt;/div&gt;
 
                                     </div>
-                                    <i>end</i>
+                                    <i><span style="color:#e7e9eb;">end.</span></i>
                                 </div>
 
 
@@ -765,7 +765,7 @@
                                                 style="color:#999">&lt;</span>/div<span class="tagcolor"
                                                 style="color:#999">&gt;</span></span>
                                     </div>
-                                    <i>.</i>
+                                    <i><span style="color:#e7e9eb;">end.</span></i>
                                 </div>
                                 <p>В следующем примере будет выполнено разделение 25%/75% для всех устройств (очень
                                     маленьких, маленьких, средних, больших, очень больших и гигантских).</p>
@@ -826,7 +826,7 @@
                                                 style="color:#999">&lt;</span>/div<span class="tagcolor"
                                                 style="color:#999">&gt;</span></span>
                                     </div>
-                                    <i class="w3-btn w3-margin-bottom">.</i>
+                                    <i><span style="color:#e7e9eb;">end.</span></i>
                                 </div>
 
 
@@ -952,7 +952,7 @@
                                                 style="color:#999">&lt;</span>/div<span class="tagcolor"
                                                 style="color:#999">&gt;</span></span>
                                     </div>
-                                    <i class="w3-btn w3-margin-bottom">.</i>
+                                    <i><span style="color:#e7e9eb;">end.</span></i>
                                 </div>
 
                                 <hr>
@@ -1008,7 +1008,7 @@
                                             class="vv1">&lt;/div&gt;</span><br>
                                         <span class="vv1">&lt;/div&gt;</span>
                                     </div>
-                                    <i class="w3-btn w3-margin-top w3-margin-bottom">end</i>
+                                    <i><span style="color:#e7e9eb;">end.</span></i>
                                 </div>
 
                                 <div class="w3-white w3-padding">
@@ -1164,7 +1164,7 @@
                                                 style="color:#999">&lt;</span>/div<span class="tagcolor"
                                                 style="color:#999">&gt;</span></span>
                                     </div>
-                                    <i class="w3-btn w3-margin-bottom">.</i>
+                                    <i><span style="color:#e7e9eb;">end.</span></i>
                                 </div>
 
                                 <div class="w3-panel ws-note">
@@ -1290,7 +1290,7 @@
                                                 style="color:#999">&lt;</span>/div<span class="tagcolor"
                                                 style="color:#999">&gt;</span></span>
                                     </div>
-                                    <i class="w3-btn w3-margin-bottom">.</i>
+                                    <i><span style="color:#e7e9eb;">end.</span></i>
                                 </div>
                                 <hr>
 
@@ -1382,7 +1382,7 @@
                                                 style="color:#999">&lt;</span>/div<span class="tagcolor"
                                                 style="color:#999">&gt;</span></span>
                                     </div>
-                                    <i class="w3-btn w3-margin-bottom">.</i>
+                                    <i><span style="color:#e7e9eb;">end.</span></i>
                                 </div>
                         </div>
 
@@ -1553,9 +1553,7 @@
                                     &nbsp;&nbsp;&lt;/div&gt; <br>
                                     &lt;/div&gt;
                                 </div>
-
-
-                                <i class="w3-btn w3-margin-top w3-margin-bottom"> .</i>
+                                <i><span style="color:#e7e9eb;">end.</span></i>
                             </div>
 
                             <div class="w3-white w3-padding">
