--- a/html/bootstrap_grid_system.html
+++ b/html/bootstrap_grid_system.html
@@ -272,6 +272,9 @@
                                     <h3>Пример</h3>
                                     <div class="w3-code notranslate htmlHigh">
                                         <pre>
+                                            <script>
+                                                var arr = ["div", "class=", "&lt;", "&gt;"];
+                                            </script>
 &lt;div class="container text-center"&gt;
     &lt;div class="row"&gt;
         &lt;div class="col bg-info"&gt;Column&lt;/div&gt;
@@ -283,6 +286,7 @@
                                     </div>
                                     <i><span style="color:#e7e9eb;">end.</span></i>
                                 </div>
+
 
                                 <div class="container text-center">
                                     <div class="row">
