--- a/html/bootstrap_grid_system.html
+++ b/html/bootstrap_grid_system.html
@@ -272,16 +272,13 @@
                                     <h3>Пример</h3>
                                     <div class="w3-code notranslate htmlHigh">
                                         <pre>
-                                            <script>
-                                                var arr = ["div", "class=", "&lt;", "&gt;"];
-                                            </script>
-&lt;div class="container text-center"&gt;
-    &lt;div class="row"&gt;
-        &lt;div class="col bg-info"&gt;Column&lt;/div&gt;
-        &lt;div class="col bg-primary"&gt;Column&lt;/div&gt;
-        &lt;div class="col bg-info"&gt;Column&lt;/div&gt;
-    &lt;/div&gt;
-&lt;/div&gt;
+&lt;<vv1>div</vv1> <vv2>class=</vv2><vv3>"container text-center"</vv3>&gt;
+    &lt;<vv1>div</vv1> <vv2>class=</vv2><vv3>"row"</vv3>&gt;
+        &lt;<vv1>div</vv1> <vv2>class=</vv2><vv3>"col bg-info"</vv3>&gt;Column&lt;<vv1>/div</vv1>&gt;
+        &lt;<vv1>div</vv1> <vv2>class=</vv2><vv3>"col bg-primary"</vv3>&gt;Column&lt;<vv1>/div</vv1>&gt;
+        &lt;<vv1>div</vv1> <vv2>class=</vv2><vv3>"col bg-info"</vv3>&gt;Column&lt;<vv1>/div</vv1>&gt;
+    &lt;<vv1>/div</vv1>&gt;
+&lt;<vv1>/div</vv1>&gt;
 </pre>
                                     </div>
                                     <i><span style="color:#e7e9eb;">end.</span></i>
