--- a/html/bootstrap_buttons.html
+++ b/html/bootstrap_buttons.html
@@ -141,7 +141,9 @@
                     <div class="container_text">
                         <div class="w-title">
                             <div class="container">
-                                <h1>Bootstrap 5 Сетки</h1>
+                                <h1>Кнопки в
+                                    Bootstrap 5</h1>
+                                <img src="../img/outline2.gif" alt="btn.gif" class="pictures">
                             </div>
                         </div>
                         <div class="column is-9-desktop is-12-tablet is-12-mobile w-content">
@@ -167,7 +169,79 @@
                             </div>
 
                             <section id="w-main">
-                                <h3>Система сеток Bootstrap 5</h3>
+                                <h3>Стили кнопок</h3>
+
+                                <p>Bootstrap 5 предоставляет различные стили кнопок:</p>
+                                <p>
+                                    <button type="button" class="btn" style="color:#555;">Базовый</button>
+                                    <button type="button" class="btn btn-primary">Основной</button>
+                                    <button type="button" class="btn btn-secondary">Дополнительный</button>
+                                    <button type="button" class="btn btn-success">Успешный</button>
+                                    <button type="button" class="btn btn-info">Информационный</button>
+                                    <button type="button" class="btn btn-warning">Предупреждающий</button>
+                                    <button type="button" class="btn btn-danger">Опасный</button>
+                                    <button type="button" class="btn btn-dark">Тёмный</button>
+                                    <button type="button" class="btn btn-light">Светлый</button>
+                                    <button type="button" class="btn btn-link">Ссылка</button>
+                                </p>
+
+                                <div class="w3-example">
+                                    <h3> Пример</h3>
+                                    <div class="w3-code notranslate htmlHigh">
+                                        <pre>
+&lt;div class="container mt-3"&gt;
+    &lt;h2>Button Styles&lt;/h2&gt;
+    &lt;button type="button" class="btn">Basic&lt;/button&gt;
+    &lt;button type="button" class="btn btn-primary"&gt;Primary&lt;&lt;button&gt;
+    &lt;button type="button" class="btn btn-secondary"&gt;Secondary&lt;/button&gt;
+    &lt;button type="button" class="btn btn-success"&gt;Success&lt;/button&gt;
+    &lt;button type="button" class="btn btn-info"&gt;Info&lt;/button&gt;
+    &lt;button type="button" class="btn btn-warning"&gt;Warning&lt;/button&gt;
+    &lt;button type="button" class="btn btn-danger"&gt;Danger&lt;/button&gt;
+    &lt;button type="button" class="btn btn-dark"&gt;Dark&lt;/button&gt;
+    &lt;button type="button" class="btn btn-light"&gt;Light&lt;/button&gt;
+    &lt;button type="button" class="btn btn-link"&gt;Link&lt;/button&gt;
+&lt;/div&gt;
+</pre>
+                                        <div class="container mt-3">
+                                            <h2>Button Styles</h2>
+                                            <button type="button" class="btn">Basic</button>
+                                            <button type="button" class="btn btn-primary">Primary</button>
+                                            <button type="button" class="btn btn-secondary">Secondary</button>
+                                            <button type="button" class="btn btn-success">Success</button>
+                                            <button type="button" class="btn btn-info">Info</button>
+                                            <button type="button" class="btn btn-warning">Warning</button>
+                                            <button type="button" class="btn btn-danger">Danger</button>
+                                            <button type="button" class="btn btn-dark">Dark</button>
+                                            <button type="button" class="btn btn-light">Light</button>
+                                            <button type="button" class="btn btn-link">Link</button>
+                                        </div>
+                                    </div>
+                                    <i><span style="color:#e7e9eb;">end.</span></i>
+                                </div>
+                                <hr>
+
+                                <h2>Элементы кнопок</h2>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
                             </section>
