--- a/html/bootstrap_images.html
+++ b/html/bootstrap_images.html
@@ -141,7 +141,8 @@
                     <div class="container_text">
                         <div class="w-title">
                             <div class="container">
-                                <h1>Bootstrap 5 Сетки</h1>
+                                <h1>Изображения в Bootstrap 5</h1>
+                                <img src="../img/i.webp" alt="images" class="pictures">
                             </div>
                         </div>
                         <div class="column is-9-desktop is-12-tablet is-12-mobile w-content">
@@ -167,7 +168,7 @@
                             </div>
 
                             <section id="w-main">
-                                <h3>Система сеток Bootstrap 5</h3>
+                                <h3>Адаптивные изображения</h3>
 
 
                             </section>
